<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <include
            android:id="@+id/toolbar_message"
            layout="@layout/app_bar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:gravity="center">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til1_form"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edtName_form"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_name"
                                android:inputType="text"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:gravity="right" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til2_form"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <EditText
                                android:id="@+id/edtPhone_form"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_phone"
                                android:inputType="phone"
                                android:maxLength="11"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:gravity="right" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til3_form"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <EditText
                                android:id="@+id/edtEmail_form"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:gravity="right" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til4_form"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <EditText
                                android:id="@+id/edtTitle_form"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_title"
                                android:inputType="text"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:gravity="right" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til5_form"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <EditText
                                android:id="@+id/edtMessage_form"
                                android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:hint="@string/prompt_message"
                                android:inputType="text"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:gravity="right" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:gravity="center">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="ثبت پیام"
                            android:background="@drawable/shape_buttons"
                            android:id="@+id/btnConfirm_from"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/TXTcolor" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
